--- a/src/index.html
+++ b/src/index.html
@@ -29,8 +29,9 @@
 
   </header>
   <main>
-    <div class="inner">
-      <p class="test">変更のテスト</p>
+    <div class="section-header">
+      <h2 class="section-header__maintitle"><span>C</span>ampaign</h2>
+      <div class="section-header__subtitle">キャンペーン</div>
     </div>
   </main>
   <footer>
