セクションタイトル変更

--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,11 @@
       <h2 class="section-header__maintitle"><span>C</span>ampaign</h2>
       <div class="section-header__subtitle">キャンペーン</div>
     </div>
+    <div class="section-header">
+      <h2 class="section-header__maintitle section-header__maintitle--big"><span>C</span>ontact</h2>
+      <div class="section-header__subtitle">お問い合わせ</div>
+      </div>
+    </div>
   </main>
   <footer>
 
