セクションタイトルの変更

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,11 @@
     <div class="section-header">
       <h2 class="section-header__maintitle section-header__maintitle--big"><span>C</span>ontact</h2>
       <div class="section-header__subtitle">お問い合わせ</div>
-      </div>
+    </div>
+    <div class="section-header">
+      <h2 class="section-header__maintitle"><span>B</span>log</h2>
+      <div class="section-header__subtitle">ブログ</div>
+    </div>
     </div>
   </main>
   <footer>
