セクションタイトルの変更

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,10 @@
   <meta property="og:description" content="" />
   <!-- ファビコン -->
   <link rel="”icon”" href="" />
+  <!-- Google Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Gotu&family=Lato:wght@400;700&family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
   <!-- css -->
   <link rel="stylesheet" href="./assets/css/style.css" />
   <!-- JavaScript -->
@@ -29,19 +33,21 @@
 
   </header>
   <main>
+    <div class="top">
     <div class="section-header">
       <h2 class="section-header__maintitle"><span>C</span>ampaign</h2>
       <div class="section-header__subtitle">キャンペーン</div>
     </div>
     <div class="section-header">
-      <h2 class="section-header__maintitle section-header__maintitle--big"><span>C</span>ontact</h2>
+      <h2 class="section-header__maintitle section-header__maintitle--contact"><span>C</span>ontact</h2>
       <div class="section-header__subtitle">お問い合わせ</div>
     </div>
     <div class="section-header">
-      <h2 class="section-header__maintitle"><span>B</span>log</h2>
+      <h2 class="section-header__maintitle section-header__maintitle--blog"><span>B</span>log</h2>
       <div class="section-header__subtitle">ブログ</div>
     </div>
     </div>
+  </div>
   </main>
   <footer>
 
