ボタンの変更

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,6 @@
 
   </header>
   <main>
-    <div class="top">
     <div class="section-header">
       <h2 class="section-header__maintitle"><span>C</span>ampaign</h2>
       <div class="section-header__subtitle">キャンペーン</div>
@@ -47,7 +46,11 @@
       <div class="section-header__subtitle">ブログ</div>
     </div>
     </div>
-  </div>
+
+    <div class="campaign__btn">
+      <a href="#" class="common-btn">View more</a>
+    </div>
+
   </main>
   <footer>
 
