ボタンの変更

--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,9 @@
       <a href="#" class="common-btn">View more</a>
     </div>
 
+    <div class="contact__btn">
+      <a href="#" class="common-btn common-btn-contact">Contact us</a>
+    </div>
   </main>
   <footer>
 
