--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,51 @@
 
   </header>
   <main>
+    <header class="header js-header">
+      <div class="header__inner">ßß
+        <h1 class="header__logo">
+          <a href="#" class="header-logo">
+            <img src="./images/common/logo.svg" alt="ヘッダーロゴ">
+          </a>
+        </h1>
+        <button class="header__drawer hamburger js-hamburger is-open">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+        <div class="header__sp-nav sp-nav js-drawer-menu">
+          <nav class="sp-nav__scroll-container">
+            <ul class="sp-nav__items js-drawer-menu">
+              <li class="sp-nav__item"><a href="#">トップ</a></li>
+              <li class="sp-nav__item"><a href="#news__content">お知らせ</a></li>
+              <li class="sp-nav__item"><a href="#content">事業内容</a></li>
+              <li class="sp-nav__item"><a href="#works">制作実績</a></li>
+              <li class="sp-nav__item"><a href="#overview">企業概要</a></li>
+              <li class="sp-nav__item"><a href="#blog">ブログ</a></li>
+              <li class="sp-nav__item"><a href="#contact">お問い合わせ</a></li>
+            </ul>
+          </nav>
+        </div>
+        <nav class="header__pc-nav pc-nav js-pc-nav">
+          <ul class="pc-nav__items">
+            <li class="pc-nav__item"><a href="#news__content">Campaign<span>キャンペーン</span></a></li>
+            <li class="pc-nav__item"><a href="#content">About us<span>私たちについて</span></a></li>
+            <li class="pc-nav__item"><a href="#works">Information<span>ダイビング情報</span></a></li>
+            <li class="pc-nav__item"><a href="#overview">Blog<span>ブログ</span></a></li>
+            <li class="pc-nav__item"><a href="#blog">Voice<span>お客様の声</span></a></li>
+            <li class="pc-nav__item"><a href="#blog">Price<span>料金一覧</span></a></li>
+            <li class="pc-nav__item"><a href="#blog">FAQ<span>よくある質問</span></a></li>
+            <li class="pc-nav__item"><a href="#blog">Contact<span>お問い合わせ</span></a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+  
+
+
+
+
+
     <div class="section-header">
       <h2 class="section-header__maintitle"><span>C</span>ampaign</h2>
       <div class="section-header__subtitle">キャンペーン</div>
