--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
   </header>
   <main>
     <header class="header js-header">
-      <div class="header__inner">ßß
+      <div class="header__inner">
         <h1 class="header__logo">
           <a href="#" class="header-logo">
             <img src="./images/common/logo.svg" alt="ヘッダーロゴ">
