ヘッダーの更新

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
       <div class="header__inner">
         <h1 class="header__logo">
           <a href="#" class="header-logo">
-            <img src="./images/common/logo.svg" alt="ヘッダーロゴ">
+            <img src="./assets/images/common/logo.svg" alt="ヘッダーロゴ">
           </a>
         </h1>
         <button class="header__drawer hamburger js-hamburger is-open">
@@ -47,15 +47,49 @@
         </button>
         <div class="header__sp-nav sp-nav js-drawer-menu">
           <nav class="sp-nav__scroll-container">
-            <ul class="sp-nav__items js-drawer-menu">
-              <li class="sp-nav__item"><a href="#">トップ</a></li>
-              <li class="sp-nav__item"><a href="#news__content">お知らせ</a></li>
-              <li class="sp-nav__item"><a href="#content">事業内容</a></li>
-              <li class="sp-nav__item"><a href="#works">制作実績</a></li>
-              <li class="sp-nav__item"><a href="#overview">企業概要</a></li>
-              <li class="sp-nav__item"><a href="#blog">ブログ</a></li>
-              <li class="sp-nav__item"><a href="#contact">お問い合わせ</a></li>
+            <div class="sp-nav__left">
+            <ul class="sp-nav__items1 js-drawer-menu">
+              <li class="sp-nav__item"><a href="#campaign">キャンペーン</a></li>
+              <li class="sp-nav__item"><a href="#">ライセンス取得</a></li>
+              <li class="sp-nav__item"><a href="#">貸切体験ダイビング</a></li>
+              <li class="sp-nav__item"><a href="#">ナイトダイビング</a></li>
             </ul>
+            <ul class="sp-nav__items2">
+              <li class="sp-nav__item"><a href="#about&nbsp;us">私たちについて</a></li>
+            </ul>
+            <ul class="sp-nav__items3">
+              <li class="sp-nav__item"><a href="#">ダイビング情報</a></li>
+              <li class="sp-nav__item"><a href="#">ライセンス講習</a></li>
+              <li class="sp-nav__item"><a href="#">体験ダイビング</a></li>
+              <li class="sp-nav__item"><a href="#">ファンダイビング</a></li>
+            </ul>
+            <ul class="sp-nav__items4">
+              <li class="sp-nav__item"><a href="#blog">ブログ</a></li>
+            </ul>
+            </div>
+            <div class="sp-nav__left">
+              <ul class="sp-nav__items5">
+                <li class="sp-nav__item"><a href="#voice">お客様の声</a></li>
+              </ul>
+              <ul class="sp-nav__items6">
+                <li class="sp-nav__item"><a href="#price">料金一覧</a></li>
+                <li class="sp-nav__item"><a href="#">ライセンス講習</a></li>
+                <li class="sp-nav__item"><a href="#">体験ダイビング</a></li>
+                <li class="sp-nav__item"><a href="#">ファンダイビング</a></li>
+              </ul>
+              <ul class="sp-nav__items7">
+                <li class="sp-nav__item"><a href="#">よくある質問</a></li>
+              </ul>
+              <ul class="sp-nav__items8">
+                <li class="sp-nav__item"><a href="#">プライバシーポリシー</a></li>
+              </ul>
+              <ul class="sp-nav__items9">
+                <li class="sp-nav__item"><a href="#">利用規約</a></li>
+              </ul>
+              <ul class="sp-nav__items10">
+                <li class="sp-nav__item"><a href="#contact">お問い合わせ</a></li>
+              </ul>
+            </div>
           </nav>
         </div>
         <nav class="header__pc-nav pc-nav js-pc-nav">
