ヘッダー更新

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
             <img src="./assets/images/common/logo.svg" alt="ヘッダーロゴ">
           </a>
         </h1>
-        <button class="header__drawer hamburger js-hamburger is-open">
+        <button class="header__drawer hamburger js-hamburger is-active">
           <span></span>
           <span></span>
           <span></span>
@@ -112,7 +112,20 @@
 
 
 
-    <div class="section-header">
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- <div class="section-header">
       <h2 class="section-header__maintitle"><span>C</span>ampaign</h2>
       <div class="section-header__subtitle">キャンペーン</div>
     </div>
@@ -132,7 +145,7 @@
 
     <div class="contact__btn">
       <a href="#" class="common-btn common-btn-contact">Contact us</a>
-    </div>
+    </div> -->
   </main>
   <footer>
 
