--- a/src/index.html
+++ b/src/index.html
@@ -29,10 +29,7 @@
   <script defer src="./assets/js/script.js"></script>
 </head>
 <body>
-  <header>
-
-  </header>
-  <main>
+    <!-- header -->
     <header class="header js-header">
       <div class="header__inner">
         <h1 class="header__logo">
@@ -47,6 +44,7 @@
         </button>
         <div class="header__sp-nav sp-nav js-drawer-menu">
           <nav class="sp-nav__scroll-container">
+            <div class="sp-nav__body">
             <div class="sp-nav__left">
             <ul class="sp-nav__items1 js-drawer-menu">
               <li class="sp-nav__item"><a href="#campaign">キャンペーン</a></li>
@@ -90,23 +88,27 @@
                 <li class="sp-nav__item"><a href="#contact">お問い合わせ</a></li>
               </ul>
             </div>
+          </div>
           </nav>
         </div>
         <nav class="header__pc-nav pc-nav js-pc-nav">
           <ul class="pc-nav__items">
-            <li class="pc-nav__item"><a href="#news__content">Campaign<span>キャンペーン</span></a></li>
-            <li class="pc-nav__item"><a href="#content">About us<span>私たちについて</span></a></li>
-            <li class="pc-nav__item"><a href="#works">Information<span>ダイビング情報</span></a></li>
-            <li class="pc-nav__item"><a href="#overview">Blog<span>ブログ</span></a></li>
-            <li class="pc-nav__item"><a href="#blog">Voice<span>お客様の声</span></a></li>
-            <li class="pc-nav__item"><a href="#blog">Price<span>料金一覧</span></a></li>
-            <li class="pc-nav__item"><a href="#blog">FAQ<span>よくある質問</span></a></li>
-            <li class="pc-nav__item"><a href="#blog">Contact<span>お問い合わせ</span></a></li>
+            <li class="pc-nav__item"><a href="#campaign">Campaign<span>キャンペーン</span></a></li>
+            <li class="pc-nav__item"><a href="#about&nbsp;us">About us<span>私たちについて</span></a></li>
+            <li class="pc-nav__item"><a href="#information">Information<span>ダイビング情報</span></a></li>
+            <li class="pc-nav__item"><a href="#blog">Blog<span>ブログ</span></a></li>
+            <li class="pc-nav__item"><a href="#voice">Voice<span>お客様の声</span></a></li>
+            <li class="pc-nav__item"><a href="#price">Price<span>料金一覧</span></a></li>
+            <li class="pc-nav__item"><a href="#faq">FAQ<span>よくある質問</span></a></li>
+            <li class="pc-nav__item"><a href="#contact">Contact<span>お問い合わせ</span></a></li>
           </ul>
         </nav>
       </div>
     </header>
   
+    <main>
+    <!-- mv -->
+
 
 
 
