ファイルの変更

--- a/src/index.html
+++ b/src/index.html
@@ -46,46 +46,46 @@
           <nav class="sp-nav__scroll-container">
             <div class="sp-nav__body">
             <div class="sp-nav__left">
-            <ul class="sp-nav__items1 js-drawer-menu">
-              <li class="sp-nav__item"><a href="#campaign">キャンペーン</a></li>
+            <ul class="sp-nav__items js-drawer-menu">
+              <li class="sp-nav__item"><a href="#campaign"><span class="sp-nav__logo"></span>キャンペーン</a></li>
               <li class="sp-nav__item"><a href="#">ライセンス取得</a></li>
               <li class="sp-nav__item"><a href="#">貸切体験ダイビング</a></li>
               <li class="sp-nav__item"><a href="#">ナイトダイビング</a></li>
             </ul>
-            <ul class="sp-nav__items2">
-              <li class="sp-nav__item"><a href="#about&nbsp;us">私たちについて</a></li>
+            <ul class="sp-nav__items">
+              <li class="sp-nav__item"><a href="#about&nbsp;us"><span class="sp-nav__logo"></span>私たちについて</a></li>
             </ul>
-            <ul class="sp-nav__items3">
-              <li class="sp-nav__item"><a href="#">ダイビング情報</a></li>
+            <ul class="sp-nav__items">
+              <li class="sp-nav__item"><a href="#"><span class="sp-nav__logo"></span>ダイビング情報</a></li>
               <li class="sp-nav__item"><a href="#">ライセンス講習</a></li>
               <li class="sp-nav__item"><a href="#">体験ダイビング</a></li>
               <li class="sp-nav__item"><a href="#">ファンダイビング</a></li>
             </ul>
-            <ul class="sp-nav__items4">
-              <li class="sp-nav__item"><a href="#blog">ブログ</a></li>
+            <ul class="sp-nav__items">
+              <li class="sp-nav__item"><a href="#blog"><span class="sp-nav__logo"></span>ブログ</a></li>
             </ul>
             </div>
             <div class="sp-nav__left">
-              <ul class="sp-nav__items5">
-                <li class="sp-nav__item"><a href="#voice">お客様の声</a></li>
+              <ul class="sp-nav__items">
+                <li class="sp-nav__item"><a href="#voice"><span class="sp-nav__logo"></span>お客様の声</a></li>
               </ul>
-              <ul class="sp-nav__items6">
-                <li class="sp-nav__item"><a href="#price">料金一覧</a></li>
+              <ul class="sp-nav__items">
+                <li class="sp-nav__item"><a href="#price"><span class="sp-nav__logo"></span>料金一覧</a></li>
                 <li class="sp-nav__item"><a href="#">ライセンス講習</a></li>
                 <li class="sp-nav__item"><a href="#">体験ダイビング</a></li>
                 <li class="sp-nav__item"><a href="#">ファンダイビング</a></li>
               </ul>
-              <ul class="sp-nav__items7">
-                <li class="sp-nav__item"><a href="#">よくある質問</a></li>
+              <ul class="sp-nav__items">
+                <li class="sp-nav__item"><a href="#"><span class="sp-nav__logo"></span>よくある質問</a></li>
               </ul>
-              <ul class="sp-nav__items8">
-                <li class="sp-nav__item"><a href="#">プライバシーポリシー</a></li>
+              <ul class="sp-nav__items">
+                <li class="sp-nav__item"><a href="#"><span class="sp-nav__logo"></span>プライバシーポリシー</a></li>
               </ul>
-              <ul class="sp-nav__items9">
-                <li class="sp-nav__item"><a href="#">利用規約</a></li>
+              <ul class="sp-nav__items">
+                <li class="sp-nav__item"><a href="#"><span class="sp-nav__logo"></span>利用規約</a></li>
               </ul>
-              <ul class="sp-nav__items10">
-                <li class="sp-nav__item"><a href="#contact">お問い合わせ</a></li>
+              <ul class="sp-nav__items">
+                <li class="sp-nav__item"><a href="#contact"><span class="sp-nav__logo"></span>お問い合わせ</a></li>
               </ul>
             </div>
           </div>
