--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Gotu&family=Lato:wght@400;700&family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
   <!-- css -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="stylesheet" href="./assets/css/style.css" />
   <!-- JavaScript -->
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script defer src="./assets/js/script.js"></script>
 </head>
 <body>
@@ -46,45 +48,45 @@
           <nav class="sp-nav__scroll-container">
             <div class="sp-nav__body">
             <div class="sp-nav__left">
-            <ul class="sp-nav__items js-drawer-menu">
+            <ul class="sp-nav__items1 js-drawer-menu">
               <li class="sp-nav__item"><a href="#campaign"><span class="sp-nav__logo"></span>キャンペーン</a></li>
               <li class="sp-nav__item"><a href="#">ライセンス取得</a></li>
               <li class="sp-nav__item"><a href="#">貸切体験ダイビング</a></li>
               <li class="sp-nav__item"><a href="#">ナイトダイビング</a></li>
             </ul>
-            <ul class="sp-nav__items">
+            <ul class="sp-nav__items2">
               <li class="sp-nav__item"><a href="#about&nbsp;us"><span class="sp-nav__logo"></span>私たちについて</a></li>
             </ul>
-            <ul class="sp-nav__items">
+            <ul class="sp-nav__items3">
               <li class="sp-nav__item"><a href="#"><span class="sp-nav__logo"></span>ダイビング情報</a></li>
               <li class="sp-nav__item"><a href="#">ライセンス講習</a></li>
               <li class="sp-nav__item"><a href="#">体験ダイビング</a></li>
               <li class="sp-nav__item"><a href="#">ファンダイビング</a></li>
             </ul>
-            <ul class="sp-nav__items">
+            <ul class="sp-nav__items4">
               <li class="sp-nav__item"><a href="#blog"><span class="sp-nav__logo"></span>ブログ</a></li>
             </ul>
             </div>
             <div class="sp-nav__left">
-              <ul class="sp-nav__items">
+              <ul class="sp-nav__items5">
                 <li class="sp-nav__item"><a href="#voice"><span class="sp-nav__logo"></span>お客様の声</a></li>
               </ul>
-              <ul class="sp-nav__items">
+              <ul class="sp-nav__items6">
                 <li class="sp-nav__item"><a href="#price"><span class="sp-nav__logo"></span>料金一覧</a></li>
                 <li class="sp-nav__item"><a href="#">ライセンス講習</a></li>
                 <li class="sp-nav__item"><a href="#">体験ダイビング</a></li>
                 <li class="sp-nav__item"><a href="#">ファンダイビング</a></li>
               </ul>
-              <ul class="sp-nav__items">
+              <ul class="sp-nav__items7">
                 <li class="sp-nav__item"><a href="#"><span class="sp-nav__logo"></span>よくある質問</a></li>
               </ul>
-              <ul class="sp-nav__items">
+              <ul class="sp-nav__items8">
                 <li class="sp-nav__item"><a href="#"><span class="sp-nav__logo"></span>プライバシーポリシー</a></li>
               </ul>
-              <ul class="sp-nav__items">
+              <ul class="sp-nav__items9">
                 <li class="sp-nav__item"><a href="#"><span class="sp-nav__logo"></span>利用規約</a></li>
               </ul>
-              <ul class="sp-nav__items">
+              <ul class="sp-nav__items10">
                 <li class="sp-nav__item"><a href="#contact"><span class="sp-nav__logo"></span>お問い合わせ</a></li>
               </ul>
             </div>
@@ -108,7 +110,38 @@
   
     <main>
     <!-- mv -->
-
+    <section class="mv">
+      <div class="mv__inner">
+        <div class="swiper mySwiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <picture>
+                <source srcset="./assets/images/common/mv-pc1.jpg">
+                <img src="./assets/images/common/mv-sp1.jpg" alt="ウミガメが泳いでいる画像">
+              </picture>
+            </div>
+            <div class="swiper-slide">
+              <picture>
+                <source srcset="./assets/images/common/mv-pc2.jpg">
+                <img src="./assets/images/common/mv-sp2.jpg" alt="ウミガメを下から撮った画像">
+              </picture>
+            </div>
+            <div class="swiper-slide">
+              <picture>
+                <source srcset="./assets/images/common/mv-pc3.jpg">
+                <img src="./assets/images/common/mv-sp3.jpg" alt="船と海の画像">
+              </picture>
+            </div>
+            <div class="swiper-slide">
+              <picture>
+                <source srcset="./assets/images/common/mv-pc4.jpg">
+                <img src="./assets/images/common/mv-sp4.jpg" alt="砂浜と綺麗な海の画像">
+              </picture>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
 
 
