--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
       <div class="header__inner">
         <h1 class="header__logo">
           <a href="#" class="header-logo">
-            <img src="./assets/images/common/logo.svg" alt="ヘッダーロゴ">
+            <img src="./assets/images/common/logo.png" alt="ヘッダーロゴ">
           </a>
         </h1>
         <button class="header__drawer hamburger js-hamburger is-active">
@@ -112,38 +112,134 @@
     <!-- mv -->
     <section class="mv">
       <div class="mv__inner">
-        <div class="swiper mySwiper">
+        <div class="swiper js-mv-swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
+              <div class="mv__slide-img">
               <picture>
                 <source srcset="./assets/images/common/mv-pc1.jpg">
                 <img src="./assets/images/common/mv-sp1.jpg" alt="ウミガメが泳いでいる画像">
               </picture>
             </div>
-            <div class="swiper-slide">
+          </div>
+          <div class="swiper-slide">
+            <div class="mv__slide-img">
               <picture>
                 <source srcset="./assets/images/common/mv-pc2.jpg">
                 <img src="./assets/images/common/mv-sp2.jpg" alt="ウミガメを下から撮った画像">
               </picture>
             </div>
-            <div class="swiper-slide">
+          </div>
+          <div class="swiper-slide">
+            <div class="mv__slide-img">
               <picture>
                 <source srcset="./assets/images/common/mv-pc3.jpg">
                 <img src="./assets/images/common/mv-sp3.jpg" alt="船と海の画像">
               </picture>
             </div>
-            <div class="swiper-slide">
+          </div>
+          <div class="swiper-slide">
+            <div class="mv__slide-img">
               <picture>
                 <source srcset="./assets/images/common/mv-pc4.jpg">
                 <img src="./assets/images/common/mv-sp4.jpg" alt="砂浜と綺麗な海の画像">
               </picture>
             </div>
           </div>
+          </div>
+        </div>
+        <div class="mv__header">
+          <h2 class="mv__maintitle">DIVING</h2>
+          <p class="mv__subtitle">into&nbsp;the&nbsp;ocean</p>
         </div>
       </div>
     </section>
 
-
+    <section class="campain top-campaign">
+      <div class="campaign__inner">
+        <div class="campaign__title section-header">
+          <h2 class="section-header__maintitle"><span>C</span>ampaign</h2>
+          <div class="section-header__subtitle">キャンペーン</div>
+        </div>
+      </div>
+      <div class="campaign__items card-list">
+        <a href="#" class="card-list__item campaign-card">
+          <figure class="campaign-card__img">
+            <img src="./assets/images/common/campaign1.jpg" alt="ブログカード1">
+          </figure>
+          <div class="campaign-card__body">
+            <div class="campaign-card__info">
+              <div class="campaign-card__category">ライセンス講習</div>
+            </div>
+            <div class="campaign-card__text">
+            <h3 class="campaign-card__title">ライセンス取得</h3>
+            <p class="campaign-card__name">全部コミコミ&lpar;お一人様&rpar;</p>
+          </div>
+          <div class="campaign-card__price">
+            <div class="campaign-card__price1">&yen;56&comma;000</div>
+            <div class="campaign-card__price2">&yen;46&comma;000</div>
+          </div>
+          </div>
+        </a>
+        <a href="#" class="card-list__item campaign-card">
+          <figure class="campaign-card__img">
+            <img src="./assets/images/common/campaign2.jpg" alt="ブログカード1">
+          </figure>
+          <div class="campaign-card__body">
+            <div class="campaign-card__info">
+              <div class="campaign-card__category">体験ダイビング</div>
+            </div>
+            <div class="campaign-card__text">
+            <h3 class="campaign-card__title">貸切体験ダイビング</h3>
+            <p class="campaign-card__name">全部コミコミ&lpar;お一人様&rpar;</p>
+          </div>
+          <div class="campaign-card__price">
+            <div class="campaign-card__price1">&yen;24&comma;000</div>
+            <div class="campaign-card__price2">&yen;18&comma;000</div>
+          </div>
+          </div>
+        </a>
+        <a href="#" class="card-list__item campaign-card">
+          <figure class="campaign-card__img">
+            <img src="./assets/images/common/campaign3.jpg" alt="ブログカード1">
+          </figure>
+          <div class="campaign-card__body">
+            <div class="campaign-card__info">
+              <div class="campaign-card__category">体験ダイビング</div>
+            </div>
+            <div class="campaign-card__text">
+            <h3 class="campaign-card__title">ナイトダイビング</h3>
+            <p class="campaign-card__name">全部コミコミ&lpar;お一人様&rpar;</p>
+          </div>
+          <div class="campaign-card__price">
+            <div class="campaign-card__price1">&yen;10&comma;000</div>
+            <div class="campaign-card__price2">&yen;8&comma;000</div>
+          </div>
+          </div>
+        </a>
+        <a href="#" class="card-list__item campaign-card">
+          <figure class="campaign-card__img">
+            <img src="./assets/images/common/campaign4.jpg" alt="ブログカード1">
+          </figure>
+          <div class="campaign-card__body">
+            <div class="campaign-card__info">
+              <div class="campaign-card__category">ファンダイビング</div>
+            </div>
+            <div class="campaign-card__text">
+            <h3 class="campaign-card__title">貸切ファンダイビング</h3>
+            <p class="campaign-card__name">全部コミコミ&lpar;お一人様&rpar;</p>
+          </div>
+          <div class="campaign-card__price">
+            <div class="campaign-card__price1">&yen;20&comma;000</div>
+            <div class="campaign-card__price2">&yen;16&comma;000</div>
+          </div>
+          </div>
+        </a>
+      </div>
+      <div class="campaign__btn">
+        <a href="#" class="common-btn">View more</a>
+      </div>
+    </section>
 
 
 
@@ -180,7 +276,7 @@
 
     <div class="contact__btn">
       <a href="#" class="common-btn common-btn-contact">Contact us</a>
-    </div> -->
+    </div> --> 
   </main>
   <footer>
 
