--- a/src/index.html
+++ b/src/index.html
@@ -368,8 +368,137 @@
                 <h2 class="section-header__maintitle"><span>V</span>oice</h2>
                 <div class="section-header__subtitle">お客様の声</div>
               </div>
+            <div class="voice__items card-items">
+              <a href="#" class="card-items__content voice-card">
+                <div class="voice-card__wrapper">
+                  <div class="voice-card__container">
+                    <div class="voice-card__content">
+                      <div class="voice-card__body">
+                        <p class="vice-card__age">20代&lpar;女性&rpar;</p>
+                        <div class="voice-card__category">ライセンス講習</div>
+                      </div>
+                      <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
+                    </div>
+                    <figure class="voice-card__img">
+                      <img src="./assets/images/common/voice1.jpg" alt="ブログカード1">
+                    </figure>
+                  </div>
+                  <p class="voice-card__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
+                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
+                    ここにテキストが入ります。ここにテキストが入ります。</p>
+                </div>
+              </a>
+              <a href="#" class="card-items__content voice-card">
+                <div class="voice-card__wrapper">
+                <div class="voice-card__container">
+                  <div class="voice-card__content">
+                    <div class="voice-card__body">
+                <p class="vice-card__age">20代&lpar;男性&rpar;</p>
+                <div class="voice-card__category">ライセンス講習</div>
+              </div>
+              <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
+            </div>
+              <figure class="voice-card__img">
+                  <img src="./assets/images/common/voice2.jpg" alt="ブログカード1">
+                </figure>
+              </div>
+              <p class="voice-card__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
+                ここにテキストが入ります。ここにテキストが入ります。</p>
+                </div>
+              </a>
+            </div>
+            </div>
+          </section>
 
-
+          <!-- price -->
+          <section class="price top-voice">
+            <div class="price__inner inner">
+              <div class="price__title section-header">
+                <h2 class="section-header__maintitle"><span>P</span>rice</h2>
+                <div class="section-header__subtitle">料金一覧</div>
+              </div>
+              <div class="price__body">
+              <figure class="price__img">
+                <source srcset="./assets/images/common/price-pc.jpg">
+                  <img src="./assets/images/common/price-sp.jpg" alt="ウミガメの画像">
+              </figure>
+              </div>
+              <div class="price__list">
+                <div class="price__item price-item">
+                  <div class="price-item__title">ライセンス講習</div>
+                  <dl class="price-item__text">
+                    <dt>オープンウォーターダイバーコース</dt>
+                    <dd>¥50,000</dd>
+                  </dl>
+                  <dl class="price-item__text">
+                    <dt>アドバンスオープンウォーターコース</dt>
+                    <dd>¥60,000</dd>
+                  </dl>
+                  <dl class="price-item__text">
+                    <dt>レスキュー＋EFRコース</dt>
+                    <dd>¥70,000</dd>
+                  </dl>
+                </div>
+              </div>
+              <div class="price__item price-item">
+                <div class="price-item__title">体験ダイビング</div>
+                <dl class="price-item__text">
+                  <dt>ビーチ体験ダイビング(半日)</dt>
+                  <dd>¥7,000</dd>
+                </dl>
+                <dl class="price-item__text">
+                  <dt>ビーチ体験ダイビング(1日)</dt>
+                  <dd>¥14,000</dd>
+                </dl>
+                <dl class="price-item__text">
+                  <dt>ボート体験ダイビング(半日)</dt>
+                  <dd>¥10,000</dd>
+                </dl>
+                <dl class="price-item__text">
+                  <dt>ボート体験ダイビング(1日)</dt>
+                  <dd>¥18,000</dd>
+                </dl>
+              </div>
+            </div>
+            <div class="price__item price-item">
+              <div class="price-item__title">ファンダイビング</div>
+              <dl class="price-item__text">
+                <dt>ビーチダイビング(2ダイブ)</dt>
+                <dd>¥14,000</dd>
+              </dl>
+              <dl class="price-item__text">
+                <dt>ボートダイビング(2ダイブ)</dt>
+                <dd>¥18,000</dd>
+              </dl>
+              <dl class="price-item__text">
+                <dt>スペシャルダイビング(2ダイブ)</dt>
+                <dd>¥24,000</dd>
+              </dl>
+              <dl class="price-item__text">
+                <dt>ナイトダイビング(2ダイブ)</dt>
+                <dd>¥10,000</dd>
+              </dl>
+            </div>
+          </div>
+          <div class="price__item price-item">
+            <div class="price-item__title">スペシャルダイビング</div>
+            <dl class="price-item__text">
+              <dt>貸切ダイビング(2ダイブ)</dt>
+              <dd>¥24,000</dd>
+            </dl>
+            <dl class="price-item__text">
+              <dt>1日ダイビング(3ダイブ)</dt>
+              <dd>¥32,000</dd>
+            </dl>
+          </div>
+        </div>
+            </div>
+            <div class="price__btn">
+              <a href="#" class="common-btn">View&nbsp;more</a>
+              <div class="price__fish"></div>
+            </div>
+          </section>
 
 
 
