--- a/src/index.html
+++ b/src/index.html
@@ -423,7 +423,6 @@
                 <source srcset="./assets/images/common/price-pc.jpg">
                   <img src="./assets/images/common/price-sp.jpg" alt="ウミガメの画像">
               </figure>
-              </div>
               <div class="price__list">
                 <div class="price__item price-item">
                   <div class="price-item__title">ライセンス講習</div>
@@ -499,7 +498,41 @@
               <div class="price__fish"></div>
             </div>
           </section>
-
+        
+         <!-- contact -->
+         <section class="contact top-contact">
+           <div class="contact__inner inner">
+            <div class="contact__container">
+             <div class="contact__access">
+              <div class="contact-logo">
+                <a href="" class="contact-logo__link">
+                  <img src="./assets/images/common/contact-logo.svg" alt="ヘッダーロゴ">
+                </a>
+              </div>
+              <div class="contact__info">
+              <div class="contact__address">
+                <address>
+                  沖縄県那覇市1-1<br>TEL:0120-000-0000<br>営業時間:8:30-19:00<br>定休日:毎週火曜日
+                </address>
+              </div>
+              <div class="contact__map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29742.2409384461!2d-157.85334081501577!3d21.280169682241162!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c006df4e5c129af%3A0x4633ddc52a688878!2z44Ki44Oh44Oq44Kr5ZCI6KGG5Zu9IOOAkjk2ODE1IOODj-ODr-OCpOW3niDjg5vjg47jg6vjg6sg44Ov44Kk44Kt44Kt!5e0!3m2!1sja!2sjp!4v1700851904771!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+            </div>
+             </div>
+             <div class="contact__content">
+              <div class="contact__title section-header">
+                <h2 class="section-header__maintitle section-header__maintitle--contact"><span>C</span>ontact</h2>
+                <div class="section-header__subtitle">お問い合わせ</div>
+              <p class="contact__text">ご予約・お問い合わせはコチラ</p>
+            </div>
+              <div class="contact__btn">
+                <a href="#" class="common-btn common-btn-contact">Contact&nbsp;us</a>
+              </div>
+            </div>
+            </div>
+            </div>
+         </section>
 
 
 
