aboutusの変更まで

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
       <div class="header__inner">
         <h1 class="header__logo">
           <a href="#" class="header-logo">
-            <img src="./assets/images/common/logo.png" alt="ヘッダーロゴ">
+            <img src="./assets/images/common/header-logo.svg" alt="ヘッダーロゴ">
           </a>
         </h1>
         <button class="header__drawer hamburger js-hamburger is-active">
@@ -47,50 +47,58 @@
         <div class="header__sp-nav sp-nav js-drawer-menu">
           <nav class="sp-nav__scroll-container">
             <div class="sp-nav__body">
-            <div class="sp-nav__left">
-            <ul class="sp-nav__items1 js-drawer-menu">
-              <li class="sp-nav__item"><a href="#campaign"><span class="sp-nav__logo"></span>キャンペーン</a></li>
-              <li class="sp-nav__item"><a href="#">ライセンス取得</a></li>
-              <li class="sp-nav__item"><a href="#">貸切体験ダイビング</a></li>
-              <li class="sp-nav__item"><a href="#">ナイトダイビング</a></li>
-            </ul>
-            <ul class="sp-nav__items2">
-              <li class="sp-nav__item"><a href="#about&nbsp;us"><span class="sp-nav__logo"></span>私たちについて</a></li>
-            </ul>
-            <ul class="sp-nav__items3">
-              <li class="sp-nav__item"><a href="#"><span class="sp-nav__logo"></span>ダイビング情報</a></li>
-              <li class="sp-nav__item"><a href="#">ライセンス講習</a></li>
-              <li class="sp-nav__item"><a href="#">体験ダイビング</a></li>
-              <li class="sp-nav__item"><a href="#">ファンダイビング</a></li>
-            </ul>
-            <ul class="sp-nav__items4">
-              <li class="sp-nav__item"><a href="#blog"><span class="sp-nav__logo"></span>ブログ</a></li>
-            </ul>
+              <div class="sp-nav__left">
+              <div class="sp-nav__wrap">
+                <ul class="sp-nav__items">
+                  <li class="sp-nav__item"><a href="#campaign"><span class="sp-nav__item-logo"></span>キャンペーン</a></li>
+                  <li class="sp-nav__item"><a href="#">ライセンス取得</a></li>
+                  <li class="sp-nav__item"><a href="#">貸切体験ダイビング</a></li>
+                  <li class="sp-nav__item"><a href="#">ナイトダイビング</a></li>
+                </ul>
+                <ul class="sp-nav__items">
+                  <li class="sp-nav__item"><a href="#about&nbsp;us"><span class="sp-nav__item-logo"></span>私たちについて</a></li>
+                </ul>
+              </div>
+              <div class="sp-nav__wrap">
+                <ul class="sp-nav__items">
+                  <li class="sp-nav__item"><a href="#"><span class="sp-nav__item-logo"></span>ダイビング情報</a></li>
+                  <li class="sp-nav__item"><a href="#">ライセンス講習</a></li>
+                  <li class="sp-nav__item"><a href="#">体験ダイビング</a></li>
+                  <li class="sp-nav__item"><a href="#">ファンダイビング</a></li>
+                </ul>
+                <ul class="sp-nav__items">
+                  <li class="sp-nav__item"><a href="#blog"><span class="sp-nav__item-logo"></span>ブログ</a></li>
+                </ul>
+              </div>
+              </div>
+              <div class="sp-nav__right">
+              <div class="sp-nav__wrap">
+                <ul class="sp-nav__items">
+                  <li class="sp-nav__item"><a href="#voice"><span class="sp-nav__item-logo"></span>お客様の声</a></li>
+                </ul>
+                <ul class="sp-nav__items">
+                  <li class="sp-nav__item"><a href="#price"><span class="sp-nav__item-logo"></span>料金一覧</a></li>
+                  <li class="sp-nav__item"><a href="#">ライセンス講習</a></li>
+                  <li class="sp-nav__item"><a href="#">体験ダイビング</a></li>
+                  <li class="sp-nav__item"><a href="#">ファンダイビング</a></li>
+                </ul>
+              </div>
+              <div class="sp-nav__wrap">
+                <ul class="sp-nav__items">
+                  <li class="sp-nav__item"><a href="#"><span class="sp-nav__item-logo"></span>よくある質問</a></li>
+                </ul>
+                <ul class="sp-nav__items">
+                  <li class="sp-nav__item"><a href="#"><span class="sp-nav__item-logo"></span>プライバシー<br class="sp-nav__item-indent">ポリシー</a></li>
+                </ul>
+                <ul class="sp-nav__items">
+                  <li class="sp-nav__item"><a href="#"><span class="sp-nav__item-logo"></span>利用規約</a></li>
+                </ul>
+                <ul class="sp-nav__items">
+                  <li class="sp-nav__item"><a href="#contact"><span class="sp-nav__item-logo"></span>お問い合わせ</a></li>
+                </ul>
+              </div>
+              </div>
             </div>
-            <div class="sp-nav__left">
-              <ul class="sp-nav__items5">
-                <li class="sp-nav__item"><a href="#voice"><span class="sp-nav__logo"></span>お客様の声</a></li>
-              </ul>
-              <ul class="sp-nav__items6">
-                <li class="sp-nav__item"><a href="#price"><span class="sp-nav__logo"></span>料金一覧</a></li>
-                <li class="sp-nav__item"><a href="#">ライセンス講習</a></li>
-                <li class="sp-nav__item"><a href="#">体験ダイビング</a></li>
-                <li class="sp-nav__item"><a href="#">ファンダイビング</a></li>
-              </ul>
-              <ul class="sp-nav__items7">
-                <li class="sp-nav__item"><a href="#"><span class="sp-nav__logo"></span>よくある質問</a></li>
-              </ul>
-              <ul class="sp-nav__items8">
-                <li class="sp-nav__item"><a href="#"><span class="sp-nav__logo"></span>プライバシーポリシー</a></li>
-              </ul>
-              <ul class="sp-nav__items9">
-                <li class="sp-nav__item"><a href="#"><span class="sp-nav__logo"></span>利用規約</a></li>
-              </ul>
-              <ul class="sp-nav__items10">
-                <li class="sp-nav__item"><a href="#contact"><span class="sp-nav__logo"></span>お問い合わせ</a></li>
-              </ul>
-            </div>
-          </div>
           </nav>
         </div>
         <nav class="header__pc-nav pc-nav js-pc-nav">
@@ -155,8 +163,9 @@
       </div>
     </section>
 
+    <!-- campaign -->
     <section class="campain top-campaign">
-      <div class="campaign__inner">
+      <div class="campaign__inner inner">
         <div class="campaign__title section-header">
           <h2 class="section-header__maintitle"><span>C</span>ampaign</h2>
           <div class="section-header__subtitle">キャンペーン</div>
@@ -184,8 +193,8 @@
           </div>
         </a>
       </div>
-      <div class="swiper-slide">
-        <a href="#" class="card-list__item campaign-card">
+      <div class="swiper-slide campaign-card">
+        <a href="#" class="card-list__item">
           <figure class="campaign-card__img">
             <img src="./assets/images/common/campaign2.jpg" alt="ブログカード1">
           </figure>
@@ -204,8 +213,8 @@
           </div>
         </a>
       </div>
-        <div class="swiper-slide">
-        <a href="#" class="card-list__item campaign-card">
+        <div class="swiper-slide campaign-card">
+        <a href="#" class="card-list__item">
           <figure class="campaign-card__img">
             <img src="./assets/images/common/campaign3.jpg" alt="ブログカード1">
           </figure>
@@ -281,6 +290,7 @@
           </div>
         </div>
       </div>
+    </section>
 
       <!-- information -->
       <section class="information top-information">
@@ -502,73 +512,121 @@
          <!-- contact -->
          <section class="contact top-contact">
            <div class="contact__inner inner">
-            <div class="contact__container">
-             <div class="contact__access">
-              <div class="contact-logo">
-                <a href="" class="contact-logo__link">
-                  <img src="./assets/images/common/contact-logo.svg" alt="ヘッダーロゴ">
-                </a>
-              </div>
-              <div class="contact__info">
-              <div class="contact__address">
-                <address>
-                  沖縄県那覇市1-1<br>TEL:0120-000-0000<br>営業時間:8:30-19:00<br>定休日:毎週火曜日
-                </address>
-              </div>
-              <div class="contact__map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29742.2409384461!2d-157.85334081501577!3d21.280169682241162!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c006df4e5c129af%3A0x4633ddc52a688878!2z44Ki44Oh44Oq44Kr5ZCI6KGG5Zu9IOOAkjk2ODE1IOODj-ODr-OCpOW3niDjg5vjg47jg6vjg6sg44Ov44Kk44Kt44Kt!5e0!3m2!1sja!2sjp!4v1700851904771!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-              </div>
-            </div>
+             <div class="contact__container">
+               <div class="contact__access">
+                 <div class="contact-logo">
+                   <a href="" class="contact-logo__link">
+                    <img src="./assets/images/common/contact-logo.svg" alt="ヘッダーロゴ">
+                   </a>
+                 </div>
+                 <div class="contact__info">
+                   <div class="contact__address">
+                     <address>
+                       沖縄県那覇市1-1<br>TEL:0120-000-0000<br>営業時間:8:30-19:00<br>定休日:毎週火曜日
+                     </address>
+                   </div>
+                   <div class="contact__map">
+                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29742.2409384461!2d-157.85334081501577!3d21.280169682241162!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c006df4e5c129af%3A0x4633ddc52a688878!2z44Ki44Oh44Oq44Kr5ZCI6KGG5Zu9IOOAkjk2ODE1IOODj-ODr-OCpOW3niDjg5vjg47jg6vjg6sg44Ov44Kk44Kt44Kt!5e0!3m2!1sja!2sjp!4v1700851904771!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                   </div>
+                 </div>
              </div>
              <div class="contact__content">
-              <div class="contact__title section-header">
-                <h2 class="section-header__maintitle section-header__maintitle--contact"><span>C</span>ontact</h2>
-                <div class="section-header__subtitle">お問い合わせ</div>
-              <p class="contact__text">ご予約・お問い合わせはコチラ</p>
+               <div class="contact__title section-header">
+                 <h2 class="section-header__maintitle section-header__maintitle--contact"><span>C</span>ontact</h2>
+                 <div class="section-header__subtitle">お問い合わせ</div>
+                 <p class="contact__text">ご予約・お問い合わせはコチラ</p>
+               </div>
+               <div class="contact__btn">
+                 <a href="#" class="common-btn common-btn-contact">Contact&nbsp;us</a>
+               </div>
+             </div>
             </div>
-              <div class="contact__btn">
-                <a href="#" class="common-btn common-btn-contact">Contact&nbsp;us</a>
+           </div>
+          </section>
+      </main>
+
+
+  <footer class="footer top-footer">
+    <div class="footer__inner">
+      <div class="footer__content">
+        <div class="footer__top">
+          <div class="footer-logo">
+            <a href="" class="footer-logo__link">
+             <img src="./assets/images/common/footer-logo.svg" alt="ヘッダーロゴ">
+            </a>
+          </div>
+          <div class="footer__sns">
+            <a href="#" class="footer__sns-icon" target="_blank">
+              <img src="./assets/images/common/FacebookLogo.svg" alt="フェイスブックのアイコン">
+            </a>
+            <a href="#" class="footer__sns-icon" target="_blank">
+              <img src="./assets/images/common/InstagramLogo.svg" alt="インスタグラムのアイコン">
+            </a>
+          </div>
+        </div>
+        <div class="footer__bottom">
+          <nav class="footer__nav footer-nav">
+            <div class="footer-nav__body">
+              <div class="footer-nav__left">
+                <div class="footer-nav__wrap">
+                  <ul class="footer-nav__items">
+                    <li class="footer-nav__item"><a href="#campaign"><span class="footer-nav__item-logo"></span>キャンペーン</a></li>
+                    <li class="footer-nav__item"><a href="#">ライセンス取得</a></li>
+                    <li class="footer-nav__item"><a href="#">貸切体験ダイビング</a></li>
+                    <li class="footer-nav__item"><a href="#">ナイトダイビング</a></li>
+                  </ul>
+                  <ul class="footer-nav__items">
+                    <li class="footer-nav__item"><a href="#about&nbsp;us"><span class="footer-nav__item-logo"></span>私たちについて</a></li>
+                  </ul>
+                </div>
+                <div class="footer-nav__wrap">
+                  <ul class="footer-nav__items">
+                    <li class="footer-nav__item"><a href="#"><span class="footer-nav__item-logo"></span>ダイビング情報</a></li>
+                    <li class="footer-nav__item"><a href="#">ライセンス講習</a></li>
+                    <li class="footer-nav__item"><a href="#">体験ダイビング</a></li>
+                    <li class="footer-nav__item"><a href="#">ファンダイビング</a></li>
+                  </ul>
+                  <ul class="footer-nav__items">
+                    <li class="footer-nav__item"><a href="#blog"><span class="footer-nav__item-logo"></span>ブログ</a></li>
+                  </ul>
+                </div>
+              </div>
+              <div class="footer-nav__right">
+                <div class="footer-nav__wrap">
+                  <ul class="footer-nav__items">
+                    <li class="footer-nav__item"><a href="#voice"><span class="footer-nav__item-logo"></span>お客様の声</a></li>
+                  </ul>
+                  <ul class="footer-nav__items">
+                    <li class="footer-nav__item"><a href="#price"><span class="footer-nav__item-logo"></span>料金一覧</a></li>
+                    <li class="footer-nav__item"><a href="#">ライセンス講習</a></li>
+                    <li class="footer-nav__item"><a href="#">体験ダイビング</a></li>
+                    <li class="footer-nav__item"><a href="#">ファンダイビング</a></li>
+                  </ul>
+                </div>
+                <div class="footer-nav__wrap">
+                  <ul class="footer-nav__items">
+                    <li class="footer-nav__item"><a href="#"><span class="footer-nav__item-logo"></span>よくある質問</a></li>
+                  </ul>
+                  <ul class="footer-nav__items">
+                    <li class="footer-nav__item"><a href="#"><span class="footer-nav__item-logo"></span>プライバシー<br class="footer-nav__item-indent">ポリシー</a></li>
+                  </ul>
+                  <ul class="footer-nav__items">
+                    <li class="footer-nav__item"><a href="#"><span class="footer-nav__item-logo"></span>利用規約</a></li>
+                  </ul>
+                  <ul class="footer-nav__items">
+                    <li class="footer-nav__item"><a href="#contact"><span class="footer-nav__item-logo"></span>お問い合わせ</a></li>
+                  </ul>
+                </div>
               </div>
             </div>
-            </div>
-            </div>
-         </section>
-
-
-
-
-
-
-
-
-
-
-
-    <!-- <div class="section-header">
-      <h2 class="section-header__maintitle"><span>C</span>ampaign</h2>
-      <div class="section-header__subtitle">キャンペーン</div>
+          </nav>
+        </div>
+      </div>
+      <div class="footer-nav__copyright">
+        <small>Copyright&copy;&nbsp;2021&nbsp;-&nbsp;2023&nbsp;CodeUps&nbsp;LLC.All&nbsp;Rights&nbsp;Reserved</small>
+      </div>
     </div>
-    <div class="section-header">
-      <h2 class="section-header__maintitle section-header__maintitle--contact"><span>C</span>ontact</h2>
-      <div class="section-header__subtitle">お問い合わせ</div>
-    </div>
-    <div class="section-header">
-      <h2 class="section-header__maintitle section-header__maintitle--blog"><span>B</span>log</h2>
-      <div class="section-header__subtitle">ブログ</div>
-    </div>
-    </div>
-
-    <div class="campaign__btn">
-      <a href="#" class="common-btn">View more</a>
-    </div>
-
-    <div class="contact__btn">
-      <a href="#" class="common-btn common-btn-contact">Contact us</a>
-    </div> --> 
-  </main>
-  <footer>
-
   </footer>
+  <div class="page-top-button js-page-top"></div>
 </body>
-
 </html>
