--- a/src/index.html
+++ b/src/index.html
@@ -120,40 +120,42 @@
     <!-- mv -->
     <section class="mv">
       <div class="mv__inner">
-        <div class="swiper js-mv-swiper">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <div class="mv__slide-img">
-              <picture>
-                <source srcset="./assets/images/common/mv-pc1.jpg">
-                <img src="./assets/images/common/mv-sp1.jpg" alt="ウミガメが泳いでいる画像">
-              </picture>
+        <div class="mv__wrap">
+          <div class="swiper js-mv-swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="mv__slide-img">
+                  <picture>
+                    <source srcset="./assets/images/common/mv-pc1.jpg">
+                    <img src="./assets/images/common/mv-sp1.jpg" alt="ウミガメが泳いでいる画像">
+                  </picture>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="mv__slide-img">
+                  <picture>
+                    <source srcset="./assets/images/common/mv-pc2.jpg">
+                    <img src="./assets/images/common/mv-sp2.jpg" alt="ウミガメを下から撮った画像">
+                  </picture>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="mv__slide-img">
+                  <picture>
+                    <source srcset="./assets/images/common/mv-pc3.jpg">
+                    <img src="./assets/images/common/mv-sp3.jpg" alt="船と海の画像">
+                  </picture>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="mv__slide-img">
+                  <picture>
+                    <source srcset="./assets/images/common/mv-pc4.jpg">
+                    <img src="./assets/images/common/mv-sp4.jpg" alt="砂浜と綺麗な海の画像">
+                  </picture>
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="mv__slide-img">
-              <picture>
-                <source srcset="./assets/images/common/mv-pc2.jpg">
-                <img src="./assets/images/common/mv-sp2.jpg" alt="ウミガメを下から撮った画像">
-              </picture>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="mv__slide-img">
-              <picture>
-                <source srcset="./assets/images/common/mv-pc3.jpg">
-                <img src="./assets/images/common/mv-sp3.jpg" alt="船と海の画像">
-              </picture>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="mv__slide-img">
-              <picture>
-                <source srcset="./assets/images/common/mv-pc4.jpg">
-                <img src="./assets/images/common/mv-sp4.jpg" alt="砂浜と綺麗な海の画像">
-              </picture>
-            </div>
-          </div>
           </div>
         </div>
         <div class="mv__header">
@@ -170,121 +172,119 @@
           <h2 class="section-header__maintitle"><span>C</span>ampaign</h2>
           <div class="section-header__subtitle">キャンペーン</div>
         </div>
-      
-      <div class="campaign__slider swiper js-campaign-swiper">
+        <div class="campaign__slider swiper js-campaign-swiper">
           <div class="swiper-wrapper campaign-cards">
-          <div class="swiper-slide campaign-card">
-        <a href="#" class="campaign-card__item">
-          <figure class="campaign-card__img">
-            <img src="./assets/images/common/campaign1.jpg" alt="ブログカード1">
-          </figure>
-          <div class="campaign-card__body">
-            <div class="campaign-card__info">
-              <div class="campaign-card__category">ライセンス講習</div>
+            <div class="swiper-slide campaign-card">
+              <a href="#" class="campaign-card__item">
+                <figure class="campaign-card__img">
+                  <img src="./assets/images/common/campaign1.jpg" alt="ブログカード1">
+                </figure>
+                <div class="campaign-card__body">
+                  <div class="campaign-card__info">
+                    <div class="campaign-card__category">ライセンス講習</div>
+                  </div>
+                  <div class="campaign-card__text">
+                    <h3 class="campaign-card__title">ライセンス取得</h3>
+                    <p class="campaign-card__name">全部コミコミ&lpar;お一人様&rpar;</p>
+                  </div>
+                  <div class="campaign-card__price">
+                    <div class="campaign-card__price1">&yen;56&comma;000</div>
+                    <div class="campaign-card__price2">&yen;46&comma;000</div>
+                  </div>
+                </div>
+              </a>
             </div>
-            <div class="campaign-card__text">
-            <h3 class="campaign-card__title">ライセンス取得</h3>
-            <p class="campaign-card__name">全部コミコミ&lpar;お一人様&rpar;</p>
-          </div>
-          <div class="campaign-card__price">
-            <div class="campaign-card__price1">&yen;56&comma;000</div>
-            <div class="campaign-card__price2">&yen;46&comma;000</div>
-          </div>
-          </div>
-        </a>
-      </div>
-      <div class="swiper-slide campaign-card">
-        <a href="#" class="card-list__item">
-          <figure class="campaign-card__img">
-            <img src="./assets/images/common/campaign2.jpg" alt="ブログカード1">
-          </figure>
-          <div class="campaign-card__body">
-            <div class="campaign-card__info">
-              <div class="campaign-card__category">体験ダイビング</div>
+            <div class="swiper-slide campaign-card">
+              <a href="#" class="card-list__item">
+                <figure class="campaign-card__img">
+                  <img src="./assets/images/common/campaign2.jpg" alt="ブログカード2">
+                </figure>
+                <div class="campaign-card__body">
+                  <div class="campaign-card__info">
+                    <div class="campaign-card__category">体験ダイビング</div>
+                  </div>
+                  <div class="campaign-card__text">
+                    <h3 class="campaign-card__title">貸切体験ダイビング</h3>
+                    <p class="campaign-card__name">全部コミコミ&lpar;お一人様&rpar;</p>
+                  </div>
+                  <div class="campaign-card__price">
+                    <div class="campaign-card__price1">&yen;24&comma;000</div>
+                    <div class="campaign-card__price2">&yen;18&comma;000</div>
+                  </div>
+                </div>
+              </a>
             </div>
-            <div class="campaign-card__text">
-            <h3 class="campaign-card__title">貸切体験ダイビング</h3>
-            <p class="campaign-card__name">全部コミコミ&lpar;お一人様&rpar;</p>
-          </div>
-          <div class="campaign-card__price">
-            <div class="campaign-card__price1">&yen;24&comma;000</div>
-            <div class="campaign-card__price2">&yen;18&comma;000</div>
-          </div>
-          </div>
-        </a>
-      </div>
-        <div class="swiper-slide campaign-card">
-        <a href="#" class="card-list__item">
-          <figure class="campaign-card__img">
-            <img src="./assets/images/common/campaign3.jpg" alt="ブログカード1">
-          </figure>
-          <div class="campaign-card__body">
-            <div class="campaign-card__info">
-              <div class="campaign-card__category">体験ダイビング</div>
+            <div class="swiper-slide campaign-card">
+              <a href="#" class="card-list__item">
+                <figure class="campaign-card__img">
+                  <img src="./assets/images/common/campaign3.jpg" alt="ブログカード3">
+                </figure>
+                <div class="campaign-card__body">
+                  <div class="campaign-card__info">
+                    <div class="campaign-card__category">体験ダイビング</div>
+                  </div>
+                  <div class="campaign-card__text">
+                    <h3 class="campaign-card__title">ナイトダイビング</h3>
+                    <p class="campaign-card__name">全部コミコミ&lpar;お一人様&rpar;</p>
+                  </div>
+                  <div class="campaign-card__price">
+                    <div class="campaign-card__price1">&yen;10&comma;000</div>
+                    <div class="campaign-card__price2">&yen;8&comma;000</div>
+                  </div>
+                </div>
+              </a>
             </div>
-            <div class="campaign-card__text">
-            <h3 class="campaign-card__title">ナイトダイビング</h3>
-            <p class="campaign-card__name">全部コミコミ&lpar;お一人様&rpar;</p>
-          </div>
-          <div class="campaign-card__price">
-            <div class="campaign-card__price1">&yen;10&comma;000</div>
-            <div class="campaign-card__price2">&yen;8&comma;000</div>
-          </div>
-          </div>
-        </a>
-      </div>
-        <div class="swiper-slide">
-        <a href="#" class="card-list__item campaign-card">
-          <figure class="campaign-card__img">
-            <img src="./assets/images/common/campaign4.jpg" alt="ブログカード1">
-          </figure>
-          <div class="campaign-card__body">
-            <div class="campaign-card__info">
-              <div class="campaign-card__category">ファンダイビング</div>
+            <div class="swiper-slide campaign-card">
+              <a href="#" class="card-list__item">
+                <figure class="campaign-card__img">
+                  <img src="./assets/images/common/campaign4.jpg" alt="ブログカード4">
+                </figure>
+                <div class="campaign-card__body">
+                  <div class="campaign-card__info">
+                    <div class="campaign-card__category">ファンダイビング</div>
+                  </div>
+                  <div class="campaign-card__text">
+                    <h3 class="campaign-card__title">貸切ファンダイビング</h3>
+                    <p class="campaign-card__name">全部コミコミ&lpar;お一人様&rpar;</p>
+                  </div>
+                  <div class="campaign-card__price">
+                    <div class="campaign-card__price1">&yen;20&comma;000</div>
+                    <div class="campaign-card__price2">&yen;16&comma;000</div>
+                  </div>
+                </div>
+              </a>
             </div>
-            <div class="campaign-card__text">
-            <h3 class="campaign-card__title">貸切ファンダイビング</h3>
-            <p class="campaign-card__name">全部コミコミ&lpar;お一人様&rpar;</p>
           </div>
-          <div class="campaign-card__price">
-            <div class="campaign-card__price1">&yen;20&comma;000</div>
-            <div class="campaign-card__price2">&yen;16&comma;000</div>
-          </div>
-          </div>
-        </a>
+        </div>
       </div>
-      </div>
-    </div>
-    </div>
-
       <div class="campaign__btn">
         <a href="#" class="common-btn">View&nbsp;more</a>
       </div>
     </section>
 
     <!-- about-->
-    <section class="about top-about">
-      <div class="about__inner">
-        <div class="about__title section-header">
-          <h2 class="section-header__maintitle"><span>A</span>bout</h2>
+    <section class="aboutus top-about">
+      <div class="aboutus__inner inner">
+        <div class="aboutus__title section-header">
+          <h2 class="section-header__maintitle"><span>A</span>bout&nbsp;us</h2>
           <div class="section-header__subtitle">私たちについて</div>
         </div>
-        <div class="about__img">
-          <div class="about__img-left">
+        <div class="aboutus__img">
+          <div class="aboutus__img-left">
             <img src="./assets/images/common/about1.jpg" alt="">
           </div>
-          <div class="about__img-right">
+          <div class="aboutus__img-right">
             <img src="./assets/images/common/about2.jpg" alt="">
           </div>
         </div>
-        <div class="about__text-body">
-          <div class="about__title">
-            <h3 class="about__title-main">Dive&nbsp;into&nbsp;<br>the&nbsp;Ocean</h3>
+        <div class="aboutus__text-body">
+          <div class="aboutus__title">
+            <h3 class="aboutus__title-main">Dive&nbsp;into&nbsp;<br>the&nbsp;Ocean</h3>
           </div>
-          <div class="about__text">
-            <p class="about__text-sub">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
+          <div class="aboutus__text">
+            <p class="aboutus__text-sub">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
               ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
-              <div class="about__btn">
+              <div class="aboutus__btn">
                 <a href="#" class="common-btn">View&nbsp;more</a>
               </div>
           </div>
