--- a/src/index.html
+++ b/src/index.html
@@ -23,11 +23,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Gotu&family=Lato:wght@400;700&family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
   <!-- css -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
   <link rel="stylesheet" href="./assets/css/style.css" />
   <!-- JavaScript -->
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script> -->
   <script defer src="./assets/js/script.js"></script>
 </head>
 <body>
@@ -172,7 +173,7 @@
           <h2 class="section-header__maintitle"><span>C</span>ampaign</h2>
           <div class="section-header__subtitle">キャンペーン</div>
         </div>
-        <div class="campaign__slider swiper js-campaign-swiper">
+        <div class="campaign__slider swiper js-top-campaign-swiper">
           <div class="swiper-wrapper campaign-cards">
             <div class="swiper-slide campaign-card">
               <a href="#" class="campaign-card__item">
