--- a/src/index.html
+++ b/src/index.html
@@ -167,7 +167,7 @@
     </section>
 
     <!-- campaign -->
-    <section class="campain top-campaign">
+    <!-- <section class="campain top-campaign">
       <div class="campaign__inner inner">
         <div class="campaign__title section-header">
           <h2 class="section-header__maintitle"><span>C</span>ampaign</h2>
@@ -261,6 +261,8 @@
       <div class="campaign__btn">
         <a href="#" class="common-btn">View&nbsp;more</a>
       </div>
+    </section> -->
+
     </section>
 
     <!-- about-->
@@ -430,83 +432,81 @@
                 <div class="section-header__subtitle">料金一覧</div>
               </div>
               <div class="price__body">
-              <figure class="price__img">
-                <source srcset="./assets/images/common/price-pc.jpg">
-                  <img src="./assets/images/common/price-sp.jpg" alt="ウミガメの画像">
-              </figure>
+              <picture class="price__img">
+                <source srcset="./assets/images/common/price-pc.jpg" media="(min-width: 768px)" />
+                  <img src="./assets/images/common/price-sp.jpg" alt="ウミガメの画像" />
+              </picture>
               <div class="price__list">
                 <div class="price__item price-item">
                   <div class="price-item__title">ライセンス講習</div>
-                  <dl class="price-item__text">
-                    <dt>オープンウォーターダイバーコース</dt>
-                    <dd>¥50,000</dd>
-                  </dl>
-                  <dl class="price-item__text">
-                    <dt>アドバンスオープンウォーターコース</dt>
-                    <dd>¥60,000</dd>
-                  </dl>
-                  <dl class="price-item__text">
-                    <dt>レスキュー＋EFRコース</dt>
-                    <dd>¥70,000</dd>
-                  </dl>
+                    <dl class="price-item__text">
+                      <dt>オープンウォーターダイバーコース</dt>
+                      <dd>¥50,000</dd>
+                    </dl>
+                    <dl class="price-item__text">
+                      <dt>アドバンスオープンウォーターコース</dt>
+                      <dd>¥60,000</dd>
+                    </dl>
+                    <dl class="price-item__text">
+                      <dt>レスキュー＋EFRコース</dt>
+                      <dd>¥70,000</dd>
+                    </dl>
+                </div>
+                <div class="price__item price-item">
+                  <div class="price-item__title">体験ダイビング</div>
+                    <dl class="price-item__text">
+                      <dt>ビーチ体験ダイビング(半日)</dt>
+                      <dd>¥7,000</dd>
+                    </dl>
+                    <dl class="price-item__text">
+                      <dt>ビーチ体験ダイビング(1日)</dt>
+                      <dd>¥14,000</dd>
+                    </dl>
+                    <dl class="price-item__text">
+                      <dt>ボート体験ダイビング(半日)</dt>
+                      <dd>¥10,000</dd>
+                    </dl>
+                    <dl class="price-item__text">
+                      <dt>ボート体験ダイビング(1日)</dt>
+                      <dd>¥18,000</dd>
+                    </dl>
+                </div>
+                <div class="price__item price-item">
+                  <div class="price-item__title">ファンダイビング</div>
+                    <dl class="price-item__text">
+                      <dt>ビーチダイビング(2ダイブ)</dt>
+                      <dd>¥14,000</dd>
+                    </dl>
+                    <dl class="price-item__text">
+                      <dt>ボートダイビング(2ダイブ)</dt>
+                      <dd>¥18,000</dd>
+                    </dl>
+                    <dl class="price-item__text">
+                      <dt>スペシャルダイビング(2ダイブ)</dt>
+                      <dd>¥24,000</dd>
+                    </dl>
+                    <dl class="price-item__text">
+                      <dt>ナイトダイビング(2ダイブ)</dt>
+                      <dd>¥10,000</dd>
+                    </dl>
+                </div>
+                <div class="price__item price-item">
+                  <div class="price-item__title">スペシャルダイビング</div>
+                    <dl class="price-item__text">
+                      <dt>貸切ダイビング(2ダイブ)</dt>
+                      <dd>¥24,000</dd>
+                    </dl>
+                    <dl class="price-item__text">
+                      <dt>1日ダイビング(3ダイブ)</dt>
+                      <dd>¥32,000</dd>
+                    </dl>
                 </div>
               </div>
-              <div class="price__item price-item">
-                <div class="price-item__title">体験ダイビング</div>
-                <dl class="price-item__text">
-                  <dt>ビーチ体験ダイビング(半日)</dt>
-                  <dd>¥7,000</dd>
-                </dl>
-                <dl class="price-item__text">
-                  <dt>ビーチ体験ダイビング(1日)</dt>
-                  <dd>¥14,000</dd>
-                </dl>
-                <dl class="price-item__text">
-                  <dt>ボート体験ダイビング(半日)</dt>
-                  <dd>¥10,000</dd>
-                </dl>
-                <dl class="price-item__text">
-                  <dt>ボート体験ダイビング(1日)</dt>
-                  <dd>¥18,000</dd>
-                </dl>
               </div>
-            </div>
-            <div class="price__item price-item">
-              <div class="price-item__title">ファンダイビング</div>
-              <dl class="price-item__text">
-                <dt>ビーチダイビング(2ダイブ)</dt>
-                <dd>¥14,000</dd>
-              </dl>
-              <dl class="price-item__text">
-                <dt>ボートダイビング(2ダイブ)</dt>
-                <dd>¥18,000</dd>
-              </dl>
-              <dl class="price-item__text">
-                <dt>スペシャルダイビング(2ダイブ)</dt>
-                <dd>¥24,000</dd>
-              </dl>
-              <dl class="price-item__text">
-                <dt>ナイトダイビング(2ダイブ)</dt>
-                <dd>¥10,000</dd>
-              </dl>
-            </div>
-          </div>
-          <div class="price__item price-item">
-            <div class="price-item__title">スペシャルダイビング</div>
-            <dl class="price-item__text">
-              <dt>貸切ダイビング(2ダイブ)</dt>
-              <dd>¥24,000</dd>
-            </dl>
-            <dl class="price-item__text">
-              <dt>1日ダイビング(3ダイブ)</dt>
-              <dd>¥32,000</dd>
-            </dl>
-          </div>
-        </div>
-            </div>
-            <div class="price__btn">
-              <a href="#" class="common-btn">View&nbsp;more</a>
-              <div class="price__fish"></div>
+              <div class="price__btn">
+                <a href="#" class="common-btn">View&nbsp;more</a>
+                <div class="price__fish"></div>
+              </div>
             </div>
           </section>
         
@@ -522,9 +522,10 @@
                  </div>
                  <div class="contact__info">
                    <div class="contact__address">
-                     <address>
-                       沖縄県那覇市1-1<br>TEL:0120-000-0000<br>営業時間:8:30-19:00<br>定休日:毎週火曜日
-                     </address>
+                    <p class="contact__address-text">沖縄県那覇市1-1</p>
+                    <p class="contact__address-text">TEL:0120-000-0000</p>
+                    <p class="contact__address-text">営業時間:8:30-19:00</p>
+                    <p class="contact__address-text">定休日:毎週火曜日</p>
                    </div>
                    <div class="contact__map">
                      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29742.2409384461!2d-157.85334081501577!3d21.280169682241162!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c006df4e5c129af%3A0x4633ddc52a688878!2z44Ki44Oh44Oq44Kr5ZCI6KGG5Zu9IOOAkjk2ODE1IOODj-ODr-OCpOW3niDjg5vjg47jg6vjg6sg44Ov44Kk44Kt44Kt!5e0!3m2!1sja!2sjp!4v1700851904771!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -546,7 +547,7 @@
           </section>
       </main>
 
-
+  <!-- footer -->
   <footer class="footer top-footer">
     <div class="footer__inner">
       <div class="footer__content">
